# app-lappis-ipea

./: .gitignore  .gitlab-ci.yml  .user.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  dbt_project.yml  docker-compose.yml  profiles.yml  pyproject.toml  requirements.txt  setup-git-hooks.sh
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
airflow/plugins/: cliente_base.py  cliente_contratos.py
airflow_lappis/helpers/: retry_helpers.py
airflow_lappis/plugins/: cliente_base.py  cliente_contratos.py  cliente_email.py  cliente_estrutura.py  cliente_postgres.py  cliente_siafi.py  cliente_siape.py  cliente_ted.py
docker/postgres/: init.sh
jupyter/: test_apis.ipynb
src/airflow/plugins/: cliente_base.py  (+1 more)
tests/: conftest.py  test_contratos_inativos_ingest_dag.py  test_contratos_ingest_dag.py  test_cronograma_ingest_dag.py  test_empenhos_ingest_dag.py  test_empenhos_tesouro_ingest_dag.py  test_estagios_tesouro_ingest_dag.py  test_faturas_ingest_dag.py  test_nota_credito_siafi_ingest_dag.py  test_nota_empenho_siafi_ingest_dag.py  test_notas_de_credito_ingest_dag.py  test_pf_tesouro_ingest_dag.py  test_plano_acao_ingest_dag.py  test_programa_beneficiario_ingest_dag.py  test_programacao_financeira_ingest_dag.py  test_programacao_financeira_siafi_ingest_dag.py  test_programas_ingest_dag.py  test_unidade_organizacional_ingest_dag.py
tests/test_cliente_base/: test_request.py
tests/test_cliente_contratos/: test_get_contratos.py  test_get_contratos_inativos.py  test_get_cronograma.py  test_get_empenhos.py  test_get_faturas.py
(+36 files in other folders)
